// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@startupjs/babel-plugin-dotenv Override value with mock: Override value with mock 1`] = `

import { BASE_URL as baseUrl } from '@env'
const foo = 'Bar' + baseUrl

      ↓ ↓ ↓ ↓ ↓ ↓

const baseUrl =
  (typeof window !== "undefined" &&
    window.location &&
    window.location.origin) ||
  "https://localhost:3000";
const foo = "Bar" + baseUrl;


`;

exports[`@startupjs/babel-plugin-dotenv Overrides value when multiple envs specified: Overrides value when multiple envs specified 1`] = `

import { BASE_URL, STRIPE_PUBLIC_KEY } from '@env'
const foo = 'Bar' + BASE_URL

      ↓ ↓ ↓ ↓ ↓ ↓

const STRIPE_PUBLIC_KEY = "000-000000-00";
const BASE_URL = "https://example.com";
const foo = "Bar" + BASE_URL;


`;

exports[`@startupjs/babel-plugin-dotenv Throws an error if the var is not present: Throws an error if the var is not present 1`] = `

import { BASE_URL, NON_EXISTENT } from '@env'
const foo = 'Bar' + BASE_URL

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown: "NON_EXISTENT" is not defined in ["__tests__/.env"]
[0m[31m[1m>[22m[39m[90m 1 | [39m[36mimport[39m { [33mBASE_URL[39m[33m,[39m [33mNON_EXISTENT[39m } from [32m'@env'[39m[0m
[0m [90m   | [39m                   [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m
[0m [90m 2 | [39m[36mconst[39m foo [33m=[39m [32m'Bar'[39m [33m+[39m [33mBASE_URL[39m[0m

`;

exports[`@startupjs/babel-plugin-dotenv Transforms imports to constants, and places them after all other imports: Transforms imports to constants, and places them after all other imports 1`] = `

import { observer } from 'startupjs'
import { BASE_URL, STRIPE_PUBLIC_KEY } from '@env'
import React from 'react'
import { Text } from 'react-native'
const foo = 'Bar' + BASE_URL

      ↓ ↓ ↓ ↓ ↓ ↓

import { observer } from "startupjs";
import React from "react";
import { Text } from "react-native";
const STRIPE_PUBLIC_KEY = "000-000000-00";
const BASE_URL = "https://localhost:3000";
const foo = "Bar" + BASE_URL;


`;

exports[`@startupjs/babel-plugin-dotenv Transforms when @env is a sole import: Transforms when @env is a sole import 1`] = `

import { BASE_URL, STRIPE_PUBLIC_KEY } from '@env'
const foo = 'Bar' + BASE_URL

      ↓ ↓ ↓ ↓ ↓ ↓

const STRIPE_PUBLIC_KEY = "000-000000-00";
const BASE_URL = "https://localhost:3000";
const foo = "Bar" + BASE_URL;


`;

exports[`@startupjs/babel-plugin-dotenv When override is present, do it no matter if the env exists or not: When override is present, do it no matter if the env exists or not 1`] = `

import { BASE_URL as baseUrl } from '@env'
const foo = 'Bar' + baseUrl

      ↓ ↓ ↓ ↓ ↓ ↓

const baseUrl =
  (typeof window !== "undefined" &&
    window.location &&
    window.location.origin) ||
  undefined;
const foo = "Bar" + baseUrl;


`;
